# mlx_week6_discos

./: .gitignore  README.md  bes1-snippets.txt  bes1-summaries.txt  bes2-snippets.txt  bes2-summaries.txt  bes3-snippets.txt  bes3-summaries.txt  bible.txt  debug_train.py  evaluate_v2.py  evaluate_v3.py  final-summaries.txt  joint-summaries.txt  main.py  messages.txt  original.txt  pyproject.toml  run_on_gpu.sh  snippets.txt  summaries.txt
audio/: bes1.txt  bes2.txt  bes3.txt  transcribe.py
config/: __init__.py  config.py  loader.py  validator.py
configs/: finetune_aggressive.yaml  finetune_balanced.yaml  finetune_balanced_runpod.yaml  finetune_default.yaml
model/: dataset.py  evaluate.py  evaluate_model.py  evaluate_v1.py  example.py  inference.py  qwen.py  train.py
ppo/: download_wandb_model.py  env.yml  ppo.py  ppo_wandbless.py  requirements.txt
reward_model/: prebuilt_reward.py  reward.py  reward_sky.py  reward_v1.py
skywork/: SWmodel_exploration.py  poisoned_dataset.py
