[project]
name = "mlx-week6-discos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "peft>=0.16.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
    "evaluate",
    "rouge-score>=0.1.2",
    "nltk>=3.9.1",
    "absl-py>=2.3.1",
]
